// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DeviceSelector should render empty device list 1`] = `
Array [
  <div
    className="core-padded-row dropdown"
    disabled={true}
    id="device-selector"
    onKeyDown={[Function]}
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle btn btn-primary"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      No devices available (Alt+P)
    </button>
  </div>,
  <div
    className="core-device-port-indicator off"
  />,
]
`;

exports[`DeviceSelector should render one device with serialport, usb, and jlink traits 1`] = `
Array [
  <div
    className="core-padded-row dropdown"
    disabled={false}
    id="device-selector"
    onKeyDown={[Function]}
  >
    <button
      aria-expanded={false}
      aria-haspopup={true}
      className="dropdown-toggle btn btn-primary"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Select device (Alt+P)
    </button>
  </div>,
  <div
    className="core-device-port-indicator off"
  />,
]
`;
